# lanelet2_route_planning

./: .devcontainer  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .repos  .vscode  CMakeLists.txt  Doxyfile  IMPLEMENTATION_8md.html  README.md  README_8md.html  TODO.md  annotated.html  annotated_dup.js  classes.html  classlanelet2__route__planning_1_1Lanelet2RoutePlanning-members.html  classlanelet2__route__planning_1_1Lanelet2RoutePlanning.html  classlanelet2__route__planning_1_1Lanelet2RoutePlanning.js  classplan__route__action__client_1_1PlanRouteActionClient-members.html  classplan__route__action__client_1_1PlanRouteActionClient.html  classplan__route__action__client_1_1PlanRouteActionClient.js  conversions_8cpp.html  conversions_8cpp.js  conversions_8cpp_source.html  conversions_8hpp.html  conversions_8hpp.js  conversions_8hpp_source.html  dir_0fc0cb586a6f0336e909110e2f6b2023.html  dir_0fc0cb586a6f0336e909110e2f6b2023.js  dir_32969dd698a46c6293d009fc749060d3.html  dir_32969dd698a46c6293d009fc749060d3.js  dir_4319832dbc0ede75a990e385e85e4483.html  dir_4319832dbc0ede75a990e385e85e4483.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_5bda92a4f93ea5a373ce12e3f5eabe25.html  dir_5bda92a4f93ea5a373ce12e3f5eabe25.js  dir_8533ece6a670caaba524563fc6b42618.html  dir_8533ece6a670caaba524563fc6b42618.js  dir_955a093694fcb0d3d04baabbb64d654f.html  dir_955a093694fcb0d3d04baabbb64d654f.js  (+78 more)
.github/workflows/: compose-oci.yml  docker-ros.yml  docs.yml  helm-push.yml  helm.yml
config/: params.yml
demo/: docker-compose.yml
demo/lanelet2_map_server/: params.yml
demo/lanelet2_map_server/maps/: Town10HD.osm
demo/rviz/: config.rviz
docker/: docker-compose.yaml
docker/compose/: docker-compose.yml
docs/: IMPLEMENTATION.md
global_maneuver_action_client/: CMakeLists.txt  package.xml
global_maneuver_action_client/include/global_maneuver_action_client/: global_maneuver_action_client_node.hpp
global_maneuver_action_client/include/point2maneuver/: global_maneuver_action_client_node.hpp
global_maneuver_action_client/launch/: global_maneuver_action_client.launch.py
global_maneuver_action_client/src/: global_maneuver_action_client_node.cpp
helm/: Chart.yaml  values.yaml
include/lanelet2_route_planning/: global_planner_node.hpp
lanelet2_route_planning/: CMakeLists.txt  README.md  package.xml
lanelet2_route_planning/config/: params.yml
lanelet2_route_planning/include/lanelet2_route_planning/: conversions.hpp  dummy_bicycle_rules.h  geometry.hpp  global_planner_node.hpp  lanelet2_route_planning.hpp  lanelet2_utils.hpp  ll2_route_planning_datatypes.hpp  utils.hpp
lanelet2_route_planning/launch/: lanelet2_route_planning_launch.py  lanelet2_route_planning_with_action_client_launch.py  ll2_route_planning.launch.py
lanelet2_route_planning/src/: callbacks.cpp  conversions.cpp  dummy_bicycle_rules.cpp  geometry.cpp  global_planner_node.cpp  lanelet2_route_planning.cpp  local_path_extraction.cpp  maneuver_action_fcns.cpp  map_extraction.cpp  utils.cpp  visualization.cpp
lanelet2_route_planning_ifs/: CMakeLists.txt  package.xml
lanelet2_route_planning_ifs/action/: GlobalManeuver.action
lanelet2_route_planning_interfaces/: CMakeLists.txt  package.xml
lanelet2_route_planning_interfaces/action/: GlobalManeuver.action
lanelet2_route_planning_interfaces/include/lanelet2_route_planning_interfaces/: tf2_lanelet2_route_planning_interfaces.hpp
lanelet2_route_planning_interfaces/msg/: Boundaries.msg  DriveableSpace.msg  DrivingCorridor.msg  Path.msg  PathSegment.msg  RegulatoryElement.msg  Route.msg
launch/: ll2_route_planning.launch.py
new_lanelet2_route_planning/: CMakeLists.txt  README.md  package.xml
new_lanelet2_route_planning/config/: params.yml
new_lanelet2_route_planning/include/new_lanelet2_route_planning/: conversions.hpp  geometry.hpp  new_lanelet2_route_planning.hpp  utilities.hpp  utils.hpp
new_lanelet2_route_planning/launch/: new_lanelet2_route_planning_launch.py
new_lanelet2_route_planning/src/: conversions.cpp  geometry.cpp  new_lanelet2_route_planning.cpp  utilities.cpp  utils.cpp
new_lanelet2_route_planning_interfaces/: CMakeLists.txt  README.md  package.xml
new_lanelet2_route_planning_interfaces/action/: GlobalManeuver.action
new_lanelet2_route_planning_interfaces/msg/: DriveableSpace.msg  Lane.msg  LaneElement.msg  LaneSeparator.msg  RegulatoryElement.msg  Route.msg  RouteElement.msg
plan_route_action_client/: CMakeLists.txt  README.md  package.xml
plan_route_action_client/config/: params.yml
plan_route_action_client/include/plan_route_action_client/: plan_route_action_client.hpp
plan_route_action_client/src/: plan_route_action_client.cpp
point2maneuver/: CMakeLists.txt  package.xml
point2maneuver/include/point2maneuver/: point2maneuver_node.hpp
point2maneuver/launch/: point2maneuver.launch.py
point2maneuver/src/: point2maneuver_node.cpp
scripts/: GENERATED_README.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+24 more)
src/: callbacks.cpp  global_planner_node.cpp  local_path_extraction.cpp  maneuver_action_fcns.cpp  utils.cpp  visualization.cpp
test/: docker-compose.yml
