<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lanelet2_route_planning</name>
  <version>1.0.0</version>
  <description>This package is responsible for planning a global route to a desired target destination based on a given lanelet2 map.</description>
  <maintainer email="guido.kueppers@ika.rwth-aachen.de">Guido Küppers</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>lanelet2_map_interface</depend>
  <depend>lanelet2_route_planning_interfaces</depend>
  <depend>lanelet2_utilities</depend>
  <depend>lanelet2_traffic_rules</depend>
  <depend>lanelet2_routing</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
