<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>new_lanelet2_route_planning</name>
  <version>0.0.0</version>
  <description>Plans a route on a Lanelet2 map</description>

  <maintainer email="todo@TODO.com">TODO</maintainer>
  <author email="todo@TODO.com">TODO</author>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>lanelet2_core</depend>
  <depend>lanelet2_map_interface</depend>
  <depend>lanelet2_routing</depend>
  <depend>lanelet2_traffic_rules</depend>
  <depend>lanelet2_utilities</depend>
  <depend>new_lanelet2_route_planning_interfaces</depend>
  <depend>perception_msgs</depend>
  <depend>perception_msgs_utils</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
