<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>plan_route_action_client</name>
  <version>1.0.0</version>
  <description>Action client to plan a route_planning_msgs/action/Route based on clicked RViz poses or other inputs</description>

  <maintainer email="lennart.reiher@ika.rwth-aachen.de">Lennart Reiher</maintainer>
  <author email="lennart.reiher@ika.rwth-aachen.de">Lennart Reiher</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>lanelet2_map_interface</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp</depend>
  <depend>route_planning_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
