<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>point2maneuver</name>
  <version>1.0.0</version>
  <description>This package is responsible for converting a clicked point message to an action client request to the lanelet2_route_planning</description>
  <maintainer email="lukas.ostendorf@ika.rwth-aachen.de">Lukas Ostendorf</maintainer>
  <license>TODO: License declaration</license>

  <depend>geometry_msgs</depend>
  <depend>route_planning_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp</depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
